--- a/hangryguardians.html
+++ b/hangryguardians.html
@@ -175,7 +175,7 @@
                                         <div> 
                                             <p>
                                                 <strong>
-                                                    Design Notes: 
+                                                    Project Notes: 
                                                 </strong>
                                                 <br>
                                                 As the level designer for this game, and with a daunting target of 25 levels, 
