--- a/haulaway.html
+++ b/haulaway.html
@@ -153,23 +153,27 @@
                                                 Summary
                                         </h3>
                                         <p>
+                                            A chaotic couch cooperative delivery game for 2-4 players, 
+                                            set in the hectic high seas of Baboom Bay. 
+                                            Hired by Shady Steve, gather your friends and 
+                                            coordinate as a crew to deliver goods before time runs out!
+                                            <br>
+                                            <br>
+                                            Players face treacherous waters, filled with enemies, sea mines, 
+                                            and most importantly cargo! Deliver them to the marked destinations 
+                                            to score points and earn stars.
+                                            <br>
+                                            <br>
                                             Haul Away! is the final year project for my course at Singapore Polytechnic. 
                                             The team for this project includes 
                                             <a href="https://bestcolour.github.io/site/#/">Kee Shen</a>
                                             and
                                             <a href="https://kaixingnicholas.wixsite.com/gdportfolio">Nicholas Teoh</a>
                                             , without whom the already incredibly challenging project would have been a bust.
-                                            <br>
-                                            A chaotic couch cooperative delivery game for 2-4 players, 
-                                            set in the hectic high seas of Baboom Bay. 
-                                            Hired by Shady Steve, gather your friends and 
-                                            coordinate as a crew to deliver goods before time runs out!
-                                            <br>
-                                            Players face treacherous waters, filled with enemies, sea mines, 
-                                            and most importantly cargo! Deliver them to the marked destinations 
-                                            to score points and earn stars.
                                         </p>
                                         <br>
+
+
                                         <h3 class="pb-2" style="font-size: 1.5em;">Project Information</h3>
                                         <p class="pb-3" style="line-height: 1.5em;">
                                             <strong>Genre:</strong>
@@ -197,6 +201,52 @@
                                             C#
                                             <br>
                                         </p>
+                                        
+                                        <button type="button" class="collapsible">Design Notes</button>
+                                        <div class="collapsible-content mb-3"> 
+                                            <br>
+                                            <p>
+                                                <strong>
+                                                    Project Notes: 
+                                                </strong>
+                                                <br>
+                                                As the lead programmer for this game, the biggest challenge was ensuring
+                                                that at each stage of development, we had not overscoped on the numerous 
+                                                mechanics we wanted in the project. I was not immune to wanting more and 
+                                                interesting mechanics, and thus it was in discussions with the project lead 
+                                                that we pruned mechanics that would take too long to complete, would clash 
+                                                with existing ones, or proved to be too tricky to implement with our physics 
+                                                systems.
+                                                <br>
+                                                <br>
+                                                As a designer, I created the star system for scoring. The system 
+                                                uses a point and objective system as follows:
+                                                <br>
+                                                <br>
+                                                Players can score three stars. The first star is point-based, achieved via 
+                                                delivering cargo.
+                                                <br>
+                                                <br>
+                                                The other two stars are achieved via completing objectives, e.g. delivering 
+                                                to a destination 5 of its perferred cargo.
+                                                My teammates asked me why I wanted to use this system, compared to a simpler
+                                                point-based star system like we used in
+                                                <a href="hangryguardians.html" class="color-transition">Hangry Guardians</a>.
+                                                <br>
+                                                <br>
+                                                I came up with it as I wanted the game to have more replayability while creating 
+                                                more interesting challenges for veteran players. 
+                                                <br>
+                                                <br>
+                                                The intent is to keep the point requirement low so players can easily achieve a star. 
+                                                This is important as later levels are locked until the player collects enough stars. 
+                                                However in order to collect all stars in a level, 
+                                                more difficult objectives would need to be fulfilled. 
+                                                This allows casual players to progress through the game, 
+                                                while giving more experienced players a challenge. 
+                                                <br>
+                                            </p>
+                                        </div>
                                     </div>
                                     
                                     <div class="img-container portrait-container ml-3 mb-3">   
