added more notes

--- a/hangryguardians.html
+++ b/hangryguardians.html
@@ -170,41 +170,6 @@
                                             <br>
                                         </p>
                                         <br>
-                                        <!-- <button type="button" class="collapsible">Design Notes</button> -->
-                                        <!--  class="collapsible-content" -->
-                                        <div> 
-                                            <p>
-                                                <strong>
-                                                    Project Notes: 
-                                                </strong>
-                                                <br>
-                                                As the level designer for this game, and with a daunting target of 25 levels, 
-                                                I iterated through numerous levels quickly with a set of guidelines I built up over time.
-                                                <br>
-                                                <br>
-                                                <strong>
-                                                    Guideline 1: 
-                                                </strong>
-                                                <br>
-                                                Maintain a steady difficulty curve, lowering the difficulty when new mechanics are introduced.
-                                                Keep it generally low for the targeted causal audience, but keeping in mind that the game
-                                                will be exhibited in a convention where attendees are likely gamers, add some levels 
-                                                with higher difficulty.
-                                                <br>
-                                                <strong>
-                                                    Guideline 2: 
-                                                </strong>
-                                                <br>
-                                                Level size has to be limited so players can easily tap the tiles offerings are on. Design
-                                                within those constraints.
-                                                <br>
-                                                <strong>
-                                                    Guideline 3: 
-                                                </strong>
-                                                <br>
-                                                To keep levels from becoming too complex, use at most 2 primary mechanics (God Powers) at a time.
-                                            </p>
-                                        </div> 
 
 
                                         <br>
@@ -241,6 +206,39 @@
                                             C#
                                             <br>
                                         </p>
+                                        
+                                        <button type="button" class="collapsible">Project Notes</button>
+                                        <div class="collapsible-content mb-5"> 
+                                            <p>
+                                                <br>
+                                                As the level designer for this game, and with a daunting target of 25 levels, 
+                                                I iterated through numerous levels quickly with a set of guidelines I built up over time.
+                                                <br>
+                                                <br>
+                                                <strong>
+                                                    Guideline 1: 
+                                                </strong>
+                                                <br>
+                                                Maintain a steady difficulty curve, lowering the difficulty when new mechanics are introduced.
+                                                Keep it generally low for the targeted causal audience, but keeping in mind that the game
+                                                will be exhibited in a convention where attendees are likely gamers, add some levels 
+                                                with higher difficulty.
+                                                <br>
+                                                <strong>
+                                                    Guideline 2: 
+                                                </strong>
+                                                <br>
+                                                Level size has to be limited so players can easily tap the tiles offerings are on. Design
+                                                within those constraints.
+                                                <br>
+                                                <strong>
+                                                    Guideline 3: 
+                                                </strong>
+                                                <br>
+                                                To keep levels from becoming too complex, use at most 2 primary mechanics (God Powers) at a time.
+                                            </p>
+                                        </div> 
+
                                     </div>
                                     
                                     <div class="img-container portrait-container ml-3 mb-3">   
