--- a/spacerunners.html
+++ b/spacerunners.html
@@ -206,7 +206,7 @@
                                         </p>
                                         <br>
                                         
-                                        <button type="button" class="collapsible">Design Notes</button>
+                                        <button type="button" class="collapsible">Project Notes</button>
                                         <div class="collapsible-content mb-3"> 
                                             <br>
                                             <p>
