--- a/wondervalley.html
+++ b/wondervalley.html
@@ -202,6 +202,53 @@
                                         </p>
                                         <br>
                                     </div>
+                                        
+                                    <button type="button" class="collapsible">Project Notes</button>
+                                    <div class="collapsible-content mb-5"> 
+                                        <p>
+                                            <br>
+                                            As this project was right after 
+                                            <a href="hangryguardians.html" class="color-transition">Hangry Guardians</a>
+                                            , I took a step back from designing the levels and decided to instead support 
+                                            the others. It was, in hindsight, a massive overscope but I proposed and completed 
+                                            a map editor for the game.
+                                            <br>
+                                            The system procedurally generates hexagonal tiles, knits them into chunks and into a map. 
+                                            It supports different textures for tiles, and blends the textures between adjacent tiles. 
+                                            I also created a pseudo-paintbrush that allows the designers to easily paint the textures 
+                                            onto terrain. The same paintbrush system is used to place decorations on the tiles 
+                                            (random spacing, rotation, number of decorations per type is editable). All of this and more 
+                                            are saved into a scriptable object that can be loaded up in the map editor or as a map in a level.
+                                            <br>
+                                            I'm quite proud of the system as it enables designers to quickly create and prototype levels. 
+                                            However, in hindsight the system took too long to develop, and the early stages of our project 
+                                            suffered because of it. I've learned that I should be more conservative with ideas and systems, lest 
+                                            it becomes a liability.
+                                            <br>
+                                            <br>
+                                            <strong>
+                                                Guideline 1: 
+                                            </strong>
+                                            <br>
+                                            Maintain a steady difficulty curve, lowering the difficulty when new mechanics are introduced.
+                                            Keep it generally low for the targeted causal audience, but keeping in mind that the game
+                                            will be exhibited in a convention where attendees are likely gamers, add some levels 
+                                            with higher difficulty.
+                                            <br>
+                                            <strong>
+                                                Guideline 2: 
+                                            </strong>
+                                            <br>
+                                            Level size has to be limited so players can easily tap the tiles offerings are on. Design
+                                            within those constraints.
+                                            <br>
+                                            <strong>
+                                                Guideline 3: 
+                                            </strong>
+                                            <br>
+                                            To keep levels from becoming too complex, use at most 2 primary mechanics (God Powers) at a time.
+                                        </p>
+                                    </div> 
                                     
                                     <div class="contents-flexbox pb-3">
                                         <div class="img-container banner-container ml-3">
