--- a/haulaway.html
+++ b/haulaway.html
@@ -202,13 +202,9 @@
                                             <br>
                                         </p>
                                         
-                                        <button type="button" class="collapsible">Design Notes</button>
+                                        <button type="button" class="collapsible">Project Notes</button>
                                         <div class="collapsible-content mb-3"> 
-                                            <br>
                                             <p>
-                                                <strong>
-                                                    Project Notes: 
-                                                </strong>
                                                 <br>
                                                 As the lead programmer for this game, the biggest challenge was ensuring
                                                 that at each stage of development, we had not overscoped on the numerous 
