--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
                 <li class="item color-transition">
                     <a class="color-transition"
-                        href="https://drive.google.com/file/d/1l9Jhh03rFOzCsblhSOQDXUKh6I7GtRdj/view?usp=sharing"
+                        href="https://drive.google.com/file/d/13X2LZ2XfBH1gGQSE3MD-0SDfu4yX7uFi/view?usp=sharing"
                         target="_blank" rel="noopener noreferrer">Resume</a>
                 </li>
 
@@ -131,11 +131,11 @@
             <div class="intro-projects" style="padding-bottom: 100vh;">
                 <div class="intro center">
                     <h1 class="text-center">
-                        <span class="dotted-line">Hi, I'm Enrique Marcelo.</span>
+                        <span class="dotted-line">Hello, I am Enrique Marcelo.</span>
                     </h1>
 
                     <p class="text-center">
-                        I'm a programmer and designer of games and websites.<br>
+                        I'm a programmer and designer of games.<br>
                     </p>
                 </div>
             </div>
