reverted front page greeting text

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             <div class="intro-projects" style="padding-bottom: 100vh;">
                 <div class="intro center">
                     <h1 class="text-center">
-                        <span class="dotted-line">Hello, I am Enrique Marcelo.</span>
+                        <span class="dotted-line">Hi, I'm Enrique Marcelo.</span>
                     </h1>
 
                     <p class="text-center">
