added the award

--- a/haulaway.html
+++ b/haulaway.html
@@ -187,9 +187,12 @@
                                         </p>
                                         <br>
 
-
                                         <h3 class="pb-2" style="font-size: 1.5em;">Project Information</h3>
                                         <p class="pb-3" style="line-height: 1.5em;">
+                                            <strong>Bronze Medal, Crowbar Awards 2021</strong>
+                                            <br>
+                                            Category: D22 Digital/Mobile Games
+                                            <br>
                                             <strong>Genre:</strong>
                                             Action, Causal, Simulation, Co-op
                                             <br>
