--- a/index.html
+++ b/index.html
@@ -211,6 +211,8 @@
                         <p>
                             Haul Away! is the final year project for my course at Singapore Polytechnic.
                             <br>
+                            It won the Bronze Medal at the Crowbar Awards 2021 (D22 Digital/Mobile Games).
+                            <br>
                             It is a chaotic couch cooperative delivery game for 2-4 players.
                             <br>
                             <br>
