--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                     </h1>
 
                     <p class="text-center">
-                        I'm a programmer and designer of games.<br>
+                        I'm a software engineer and game developer.<br>
                     </p>
                 </div>
             </div>
